# memalart

./: .gitignore  Cargo.toml
benches/: simple.rs
src/: allocated_in_self_list.rs  lib.rs  limit.rs  numa.rs  region.rs  test_assert.rs  test_utilities.rs
src/extra_large_handler/: buddy.rs
src/non_local_ptr_manager/: lock_free_manager.rs  mod.rs  non_local_ptr_manager.rs
src/os/: mod.rs  test.rs  unix.rs  vec.rs
src/self_allocated_structs/: mod.rs  option_self_box.rs  self_box.rs  self_vec.rs
src/self_allocated_structs/btree/: append.rs  borrow.rs  entry.rs  fix.rs  map.rs  mem.rs  mod.rs  navigate.rs  node.rs  remove.rs  search.rs  set_val.rs  split.rs
src/shared_memory_allocator/: mod.rs
src/sizes/: common.rs  large.rs  mod.rs  size_class.rs
src/stats/: detailed_stats.rs  lazy_detailed_stats.rs  mod.rs  short_stats.rs
src/thread_local_allocator/: allocator_for_self_allocations.rs  chunk_manager.rs  info_for_size.rs  mod.rs  numbers_of_used_objects_with_size.rs  thread_local_allocator.rs  thread_local_self_alloc_impl.rs  tls.rs
