[package]
name = "easy-alloc"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = ">=0.2.161"
orengine-utils = ">=2.0.2, <3.0.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
sysinfo = "0.35.0"
mimalloc = { version = "0.1.48", features = ["v3"] }

[features]
more_numa_nodes = []

[[bench]]
name = "simple"
harness = false

[profile.release]
lto = "fat"
opt-level = 3